samples/_failures_safe/1761089498_7e0986_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_709ce2f5.c: In function ‘main’:
./samples/SAFE/__tmp_709ce2f5.c:178:5: error: expected expression at end of input
  178 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_709ce2f5.c:178:5: error: expected declaration or statement at end of input
